<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">游戏王卡片查询器</string>
    <string name="data_name">卡片数据包</string>
    <string name="update_log">更新历史</string>
    <string name="about_data">数据来源：OurOcg.Cn</string>
    <string name="about_application">软件开发：橙子Infinity</string>
    <string name="about_date_fmt" formatted="false">发布日期：%s</string>

    <!-- common -->
    <string name="empty"> </string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="hint">提示</string>
    <string name="back">返回</string>
    <string name="share">分享</string>

    <!-- page -->
    <string name="page_home">卡片查询器</string>
    <string name="page_card">决斗者工具</string>
    <string name="page_settings">设置</string>
    <string name="page_search">搜索卡片</string>
    <string name="page_list">搜索结果</string>
    <string name="page_tool">决斗工具</string>
    <string name="page_cardinfo">卡片信息</string>
    <string name="page_cardadjust">效果调整</string>
    <string name="page_picture">卡图</string>
    <string name="page_update">软件升级</string>
    <string name="page_assignedcard">关联卡片</string>
    
    <!-- left menu -->
    <string name="lm_search">卡片搜索</string>
    <string name="lm_banned">禁限卡表</string>
    <string name="lm_newcard">最新卡片</string>
    <string name="lm_myfav">我的最爱</string>
    <string name="lm_package">卡包</string>
    <string name="lm_deck">卡组</string>
    <string name="lm_tool">决斗工具</string>
    <string name="lm_exit">退出</string>
    
    <!-- right menu -->
    <string name="rm_settings">系统设置</string>
    <string name="rm_update">检查新版本</string>
    <string name="rm_fitable">系统适配度</string>
    <string name="rm_feedback">信息反馈</string>
    <string name="rm_about">关于本软件</string>

    <!-- items -->
    <string name="itm_home">主页</string>
    <string name="itm_search">查询</string>
    <string name="itm_list">卡片</string>
    <string name="itm_tool">工具</string>
    <string name="itm_card">信息</string>
    <string name="itm_adjust">调整</string>
    <string name="itm_pic">卡图</string>
    <string name="itm_weibo">分享</string>

    <!-- search -->
    <string name="search_name">卡片名称</string>
    <string name="search_belongs">卡片归属</string>
    <string name="search_type">卡片种类</string>
    <string name="search_race">卡片种族</string>
    <string name="search_attribute">卡片属性</string>
    <string name="search_level">星数阶级</string>
    <string name="search_rare">罕贵程度</string>
    <string name="search_limit">禁卡限制</string>
    <string name="search_attack">攻击力</string>
    <string name="search_defense">守备力</string>
    <string name="search_effect">效果种类</string>
    <string name="search_effect_text">效果</string>
    <string name="search_search">搜索卡片</string>
    <string name="search_reset">条件复位</string>
    <string name="search_na">不限</string>

    <!-- package -->
    <string name="package_list">卡包列表</string>
    <string name="package_cards">卡片内容</string>
    <string name="package_nocard">没有卡片, 请先选定卡包</string>
    <string name="package_cannot_load">无法加载卡包, 请稍后重试...</string>
    <string name="package_list_not_exist">没有卡包, 请检查网络设置, 然后重试...</string>
    <string name="package_nocard_search">正在获取卡包, 请稍候...</string>

    <!-- myfav -->
    <string name="fav_nocard">没有卡片, 请先进行收藏...</string>
    <string name="fav">收藏</string>

    <!-- deck -->
    <string name="deck_nocard">没有找到卡组, 请稍后重试...</string>
    <string name="deck_cannot_load">无法加载卡组, 请稍后重试...</string>

    <!-- list -->
    <string name="list_nocard">没有卡片，请进行搜索</string>
    <string name="list_nocard_searching">正在搜索卡片，请稍候...</string>
    <string name="card_noadjust">这张卡片没有调整</string>
    <string name="card_nopic">这张卡片没有图片\n请点击下载卡图</string>
    <string name="card_banned_pure">禁止卡</string>
    <string name="card_limit1_pure">限制卡</string>
    <string name="card_limit2_pure">准限制卡</string>
    <string name="card_banned">禁止卡(不可在卡组中放置)</string>
    <string name="card_limit1">限制卡(卡组中仅可放置一张)</string>
    <string name="card_limit2">准限制卡(卡组中仅可放置两张)</string>

    <!-- duel tools -->

    <string name="tool_oper">决斗功能</string>
    <string name="tool_player1">玩家1 生命值</string>
    <string name="tool_player2">玩家2 生命值</string>
    <string name="tool_p1Oper">玩家1 生命值操作</string>
    <string name="tool_p2Oper">玩家2 生命值操作</string>
    <string name="tool_plus">加</string>
    <string name="tool_minus">减</string>
    <string name="tool_set">设置</string>
    <string name="tool_half">减半</string>
    <string name="tool_double">加倍</string>
    <string name="tool_divide">平分</string>
    <string name="tool_opt">同化</string>
    <string name="tool_dice">骰子</string>
    <string name="tool_coin">硬币</string>
    <string name="tool_reset">重新决斗</string>
    <string name="tool_again_dice">再掷一次骰子</string>
    <string name="tool_again_coin">再抛一次硬币</string>
    <string name="tool_dice_count" formatted="false">掷骰子次数 :%d</string>
    <string name="tool_coin_count" formatted="false">抛硬币次数 :%d</string>
    <string name="tool_dice1">骰子点数：一</string>
    <string name="tool_dice2">骰子点数：二</string>
    <string name="tool_dice3">骰子点数：三</string>
    <string name="tool_dice4">骰子点数：四</string>
    <string name="tool_dice5">骰子点数：五</string>
    <string name="tool_dice6">骰子点数：六</string>
    <string name="tool_coin1">硬币朝向：正面</string>
    <string name="tool_coin2">硬币朝向：反面</string>
    <string name="tool_number_reqired">请先输入一个数字</string>

    <!-- error messages -->
    <string name="error_no_database">数据库文件不存在，请重新下载安装</string>
    <string name="error_card_id">卡片序号只能是数字</string>

    <!-- cardinfo -->
    <string name="limit">卡片限制</string>
    <string name="password">卡片密码</string>
    <string name="belongs">卡片归属</string>
    <string name="pack">所在卡包</string>
    <string name="rare">罕贵程度</string>
    <string name="japan_name">日文名称</string>
    <string name="english_name">英文名称</string>
    <string name="name">卡片名称</string>
    <string name="race">卡片种族</string>
    <string name="attribute">卡片属性</string>
    <string name="level">星数阶级</string>
    <string name="attack">攻击力</string>
    <string name="defense">守备力</string>
    <string name="pendulum_level">灵摆刻度</string>
    <string name="pendulum_LR" formatted="false">左(%d)右(%d)</string>
    <string name="type">卡片种类</string>
    <string name="effect">卡片效果</string>
    <string name="monster">怪兽</string>
    <string name="tunner">调整</string>
    <string name="pendulum">灵摆</string>
    <string name="magic">魔法</string>
    <string name="trap">陷阱</string>
    <string name="overlay">XYZ</string>
    <string name="lad">阶</string>
    <string name="split">------------------------------</string>
    <string name="assigned">关联卡片</string>
    <string name="no_assigned_card">这张卡片没有与之关联的卡片</string>
    <string name="assigned_to" formatted="false">与 %s 关联的卡片</string>

    <!-- settings -->
    <string name="settings">设置选项</string>
    <string name="set_application">软件设置</string>
    <string name="set_system">系统设置</string>
    <string name="set_sns">社交网络</string>
    <string name="pref_home">主页默认显示内容</string>
    <string name="pref_update">软件数据更新</string>
    <string name="pref_update_son">自动进行卡片数据更新</string>
    <string name="pref_update_soff">不允许进行卡片数据更新</string>
    <string name="pref_auto_name">自动提示卡片名称</string>
    <string name="pref_assigned_card">搜索时显示关联卡片</string>
    <string name="pref_fit">系统适配度</string>
    <string name="pref_fit_s">检查您的手机与本软件的适配程度</string>
    <string name="pref_data">检查数据</string>
    <string name="pref_data_s">检查本软件对存储空间的占用</string>
    <string name="pref_weibo">绑定新浪微博</string>
    <string name="pref_weibo_s">使用新浪微博帐号进行卡片分享</string>
    <string name="pref_data_msg">数据存储占用</string>
    <string name="pref_fit_s0">适配度过低，也许无法正常使用</string>
    <string name="pref_fit_s1">适配度较低，部分功能可能无法正常使用</string>
    <string name="pref_fit_s2">适配度良好，所有功能均可正常使用</string>
    <string name="pref_fit_s3">适配度优秀，所有功能均可正常使用且流畅</string>
	<string name="st_font_size">字体大小</string>
	<string name="st_font_smaller">&lt;</string>
	<string name="st_font_bigger">&gt;</string>
	<string name="st_font_demo">囧</string>
    
    <!-- update -->
    <string name="update_start">开始更新</string>
    <string name="update_no_database">您的设备上没有安装卡片数据库，点击“更新”按钮后将为您下载并安装它，安装完毕后请重新启动本软件</string>
    <string name="update_checking">正在检查更新，请稍候...</string>
    <string name="update_downloading">正在下载更新，关闭窗口将丢失下载任务，确定要关闭?</string>
    <string name="update_no_apk">卡片查询器无需更新</string>
    <string name="update_no_data">卡片数据库无需更新</string>
    <string name="update_no">没有需要更新的内容</string>
    <string name="update_apk_fmt" formatted="false">卡片查询器有更新，最新版本: %s</string>
    <string name="update_data_fmt" formatted="false">卡片数据库有更新，新增卡片 %d 张</string>
    <string name="update_data_full">下载完整卡片数据库</string>
    <string name="update_finish">完成更新</string>
    <string name="update_apk">主程序</string>
    <string name="update_data">数据包</string>
    <string name="update_renew">更新</string>
    <string name="update_install">安装</string>
    <string name="update_hint">发现更新，请向右侧滑动来进入更新界面</string>
    <string name="update_task" formatted="false">剩余任务: %d</string>
    <string name="update_download_data_finish">卡片数据库下载完毕，重新启动本软件即可开始使用</string>
    <string name="update_data_finished">本次更新包含了数据库的更新，请重新启动本软件以启用新的数据库</string>
    <string name="msg_no_database">没有找到数据库文件，请下载并放于 /sdcard/.yugioh/ 下，然后重新启动本软件</string>
    <string name="msg_not_impl">该功能暂未实现，请静候新版本哦~</string>
    <string name="slow_query_hint">此条件将使搜索变慢</string>
    <string name="datasize_counting">计算中...</string>
    <string name="main_update_database">正在更新数据库, 现在请勿操作...</string>
    <string name="main_updated_database">数据库更新完毕, 最新卡片已经准备好</string>
    
    <!-- jump -->
    <string name="jump_jump">跳转</string>
    <string name="refresh">刷新</string>
    <string name="send">发送</string>
    <string name="no_email_binded">没有绑定email</string>
    <string name="hint_feedback">在这里写下你想对我们说的话</string>
    <string name="sending">正在发送...</string>
    <string name="empty_feedback">反馈信息不能为空</string>
    <string name="feedback_send_ok">发送反馈信息成功</string>
    <string name="feedback_send_fail">发送反馈信息失败</string>
    <string name="hint_cardname">请输入卡片名称来检索</string>

    <string name="no_sdcard">没有找到 SD 卡，无法启动本软件</string>
    <string name="str_confirm_delete">确定要清空全部卡图吗，清空卡图后您将需要重新下载卡图。</string>
    <string name="str_source_code">对源码感兴趣？请点击此处</string>
</resources>