<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:layout_above="@+id/layBottom" android:layout_below="@+id/layTop"
	android:layout_margin="4dip">

	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:background="@color/gray">

		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:layout_margin="1dip"
			android:background="@color/white" android:padding="4dip">

			<TextView android:id="@+id/tvPlay1" android:layout_width="120dip"
				android:layout_height="24dip" android:text="@string/tool_player1"
				android:textColor="@color/black" android:gravity="left|center_vertical" />

			<TextView android:id="@+id/tvPlayer1Life"
				android:layout_width="fill_parent" android:layout_height="24dip"
				android:layout_toRightOf="@+id/tvPlay1" android:gravity="left|center_vertical"
				android:textColor="@color/green" android:text="8000" />

			<TextView android:id="@+id/tvPlay2" android:layout_width="120dip"
				android:layout_height="24dip" android:text="@string/tool_player2"
				android:textColor="@color/black" android:gravity="left|center_vertical"
				android:layout_below="@+id/tvPlay1" />

			<TextView android:id="@+id/tvPlayer2Life"
				android:layout_width="fill_parent" android:layout_height="24dip"
				android:layout_toRightOf="@+id/tvPlay2" android:layout_below="@+id/tvPlayer1Life"
				android:gravity="left|center_vertical" android:textColor="@color/green"
				android:text="8000" />

			<TextView android:id="@+id/tvP1Oper" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="@color/black"
				android:textColor="@color/white" android:text="@string/tool_p1Oper"
				android:gravity="left|center_vertical" android:layout_below="@+id/tvPlay2"
				android:layout_marginTop="2dip" android:layout_marginBottom="2dip"
				android:paddingLeft="4dip" />

			<EditText android:id="@+id/etP1Life" android:layout_width="fill_parent"
				android:layout_height="40dip" android:singleLine="true"
				android:maxLines="1" android:layout_below="@+id/tvP1Oper"
				android:layout_toLeftOf="@+id/btnP1Add" android:numeric="integer" />

			<Button android:id="@+id/btnP1Add" android:layout_width="60dip"
				android:layout_height="40dip" android:text="@string/tool_plus"
				android:layout_below="@+id/tvP1Oper" android:layout_toLeftOf="@+id/btnP1Minus" />

			<Button android:id="@+id/btnP1Minus" android:layout_width="60dip"
				android:layout_height="40dip" android:text="@string/tool_minus"
				android:layout_below="@+id/tvP1Oper" android:layout_toLeftOf="@+id/btnP1Set" />

			<Button android:id="@+id/btnP1Set" android:layout_width="60dip"
				android:layout_height="40dip" android:text="@string/tool_set"
				android:layout_below="@+id/tvP1Oper"
				android:layout_alignParentRight="true" />

			<Button android:id="@+id/btnP1Half" android:layout_width="75dip"
				android:layout_height="40dip" android:text="@string/tool_half"
				android:layout_below="@+id/etP1Life" />

			<Button android:id="@+id/btnP1Double" android:layout_width="75dip"
				android:layout_height="40dip" android:text="@string/tool_double"
				android:layout_below="@+id/etP1Life" android:layout_toRightOf="@+id/btnP1Half" />

			<Button android:id="@+id/btnP1Divide" android:layout_width="75dip"
				android:layout_height="40dip" android:text="@string/tool_divide"
				android:layout_below="@+id/etP1Life" android:layout_toRightOf="@+id/btnP1Double"
				android:textColor="@color/red" />

			<Button android:id="@+id/btnP1Opt" android:layout_width="75dip"
				android:layout_height="40dip" android:text="@string/tool_opt"
				android:layout_below="@+id/etP1Life" android:layout_toRightOf="@+id/btnP1Divide"
				android:textColor="@color/red" />


			<TextView android:id="@+id/tvP2Oper" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="@color/black"
				android:textColor="@color/white" android:text="@string/tool_p2Oper"
				android:gravity="left|center_vertical" android:layout_below="@+id/btnP1Half"
				android:layout_marginTop="2dip" android:layout_marginBottom="2dip"
				android:paddingLeft="4dip" />


			<EditText android:id="@+id/etP2Life" android:layout_width="fill_parent"
				android:layout_height="40dip" android:singleLine="true"
				android:maxLines="1" android:layout_below="@+id/tvP2Oper"
				android:layout_toLeftOf="@+id/btnP2Add" android:numeric="integer" />

			<Button android:id="@+id/btnP2Add" android:layout_width="60dip"
				android:layout_height="40dip" android:text="@string/tool_plus"
				android:layout_below="@+id/tvP2Oper" android:layout_toLeftOf="@+id/btnP2Minus" />

			<Button android:id="@+id/btnP2Minus" android:layout_width="60dip"
				android:layout_height="40dip" android:text="@string/tool_minus"
				android:layout_below="@+id/tvP2Oper" android:layout_toLeftOf="@+id/btnP2Set" />

			<Button android:id="@+id/btnP2Set" android:layout_width="60dip"
				android:layout_height="40dip" android:text="@string/tool_set"
				android:layout_below="@+id/tvP2Oper"
				android:layout_alignParentRight="true" />

			<Button android:id="@+id/btnP2Half" android:layout_width="75dip"
				android:layout_height="40dip" android:text="@string/tool_half"
				android:layout_below="@+id/etP2Life" />

			<Button android:id="@+id/btnP2Double" android:layout_width="75dip"
				android:layout_height="40dip" android:text="@string/tool_double"
				android:layout_below="@+id/etP2Life" android:layout_toRightOf="@+id/btnP2Half" />

			<Button android:id="@+id/btnP2Divide" android:layout_width="75dip"
				android:layout_height="40dip" android:text="@string/tool_divide"
				android:layout_below="@+id/etP2Life" android:layout_toRightOf="@+id/btnP2Double"
				android:textColor="@color/red" />

			<Button android:id="@+id/btnP2Opt" android:layout_width="75dip"
				android:layout_height="40dip" android:text="@string/tool_opt"
				android:layout_below="@+id/etP2Life" android:layout_toRightOf="@+id/btnP2Divide"
				android:textColor="@color/red" />


			<TextView android:id="@+id/tvOper" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="@color/black"
				android:textColor="@color/white" android:text="@string/tool_oper"
				android:gravity="left|center_vertical" android:layout_above="@+id/layDiceCoin"
				android:layout_marginTop="2dip" android:layout_marginBottom="2dip"
				android:paddingLeft="4dip" />

			<RelativeLayout android:id="@+id/layDiceCoin"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_alignParentBottom="true">

				<Button android:id="@+id/btnCoin" android:layout_width="80dip"
					android:layout_height="40dip" android:text="@string/tool_coin" />

				<Button android:id="@+id/btnDice" android:layout_width="80dip"
					android:layout_height="40dip" android:text="@string/tool_dice"
					android:layout_toRightOf="@+id/btnCoin" />

				<Button android:id="@+id/btnRestartDuel"
					android:layout_width="80dip" android:layout_height="40dip"
					android:text="@string/tool_reset" android:layout_toRightOf="@+id/btnDice" />

			</RelativeLayout>
		</RelativeLayout>
	</RelativeLayout>


</RelativeLayout>
