<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dip" >

    <TextView
        android:id="@+id/tvPlay1"
        android:layout_width="120dip"
        android:layout_height="24dip"
        android:gravity="left|center_vertical"
        android:paddingLeft="4dip"
        android:text="@string/tool_player1"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/tvPlayer1Life"
        android:layout_width="match_parent"
        android:layout_height="24dip"
        android:layout_toRightOf="@+id/tvPlay1"
        android:gravity="left|center_vertical"
        android:text="8000"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/tvPlay2"
        android:layout_width="120dip"
        android:layout_height="24dip"
        android:layout_below="@+id/tvPlay1"
        android:gravity="left|center_vertical"
        android:paddingLeft="4dip"
        android:text="@string/tool_player2"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/tvPlayer2Life"
        android:layout_width="match_parent"
        android:layout_height="24dip"
        android:layout_below="@+id/tvPlayer1Life"
        android:layout_toRightOf="@+id/tvPlay2"
        android:gravity="left|center_vertical"
        android:text="8000"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/tvSplit1"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/tvPlay2"
        android:background="?android:attr/actionModeSplitBackground" />

    <TextView
        android:id="@+id/tvP1Oper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSplit1"
        android:layout_marginBottom="2dip"
        android:layout_marginTop="8dip"
        android:background="@color/black"
        android:gravity="left|center_vertical"
        android:paddingLeft="4dip"
        android:text="@string/tool_p1Oper"
        android:textColor="?android:attr/textColorPrimary" />

    <EditText
        android:id="@+id/etP1Life"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/tvP1Oper"
        android:layout_toLeftOf="@+id/btnP1Add"
        android:maxLines="1"
        android:numeric="integer"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnP1Add"
        android:layout_width="60dip"
        android:layout_height="40dip"
        android:layout_below="@+id/tvP1Oper"
        android:layout_toLeftOf="@+id/btnP1Minus"
        android:text="@string/tool_plus" />

    <Button
        android:id="@+id/btnP1Minus"
        android:layout_width="60dip"
        android:layout_height="40dip"
        android:layout_below="@+id/tvP1Oper"
        android:layout_toLeftOf="@+id/btnP1Set"
        android:text="@string/tool_minus" />

    <Button
        android:id="@+id/btnP1Set"
        android:layout_width="60dip"
        android:layout_height="40dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvP1Oper"
        android:text="@string/tool_set" />

    <Button
        android:id="@+id/btnP1Half"
        android:layout_width="75dip"
        android:layout_height="40dip"
        android:layout_below="@+id/etP1Life"
        android:text="@string/tool_half" />

    <Button
        android:id="@+id/btnP1Double"
        android:layout_width="75dip"
        android:layout_height="40dip"
        android:layout_below="@+id/etP1Life"
        android:layout_toRightOf="@+id/btnP1Half"
        android:text="@string/tool_double" />

    <Button
        android:id="@+id/btnP1Divide"
        android:layout_width="75dip"
        android:layout_height="40dip"
        android:layout_below="@+id/etP1Life"
        android:layout_toRightOf="@+id/btnP1Double"
        android:text="@string/tool_divide"
        android:textColor="@color/red" />

    <Button
        android:id="@+id/btnP1Opt"
        android:layout_width="75dip"
        android:layout_height="40dip"
        android:layout_below="@+id/etP1Life"
        android:layout_toRightOf="@+id/btnP1Divide"
        android:text="@string/tool_opt"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/tvSplit2"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/btnP1Half"
        android:background="?android:attr/actionModeSplitBackground" />

    <TextView
        android:id="@+id/tvP2Oper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSplit2"
        android:layout_marginBottom="2dip"
        android:layout_marginTop="8dip"
        android:background="@color/black"
        android:gravity="left|center_vertical"
        android:paddingLeft="4dip"
        android:text="@string/tool_p2Oper"
        android:textColor="?android:attr/textColorPrimary" />

    <EditText
        android:id="@+id/etP2Life"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/tvP2Oper"
        android:layout_toLeftOf="@+id/btnP2Add"
        android:maxLines="1"
        android:numeric="integer"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnP2Add"
        android:layout_width="60dip"
        android:layout_height="40dip"
        android:layout_below="@+id/tvP2Oper"
        android:layout_toLeftOf="@+id/btnP2Minus"
        android:text="@string/tool_plus" />

    <Button
        android:id="@+id/btnP2Minus"
        android:layout_width="60dip"
        android:layout_height="40dip"
        android:layout_below="@+id/tvP2Oper"
        android:layout_toLeftOf="@+id/btnP2Set"
        android:text="@string/tool_minus" />

    <Button
        android:id="@+id/btnP2Set"
        android:layout_width="60dip"
        android:layout_height="40dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvP2Oper"
        android:text="@string/tool_set" />

    <Button
        android:id="@+id/btnP2Half"
        android:layout_width="75dip"
        android:layout_height="40dip"
        android:layout_below="@+id/etP2Life"
        android:text="@string/tool_half" />

    <Button
        android:id="@+id/btnP2Double"
        android:layout_width="75dip"
        android:layout_height="40dip"
        android:layout_below="@+id/etP2Life"
        android:layout_toRightOf="@+id/btnP2Half"
        android:text="@string/tool_double" />

    <Button
        android:id="@+id/btnP2Divide"
        android:layout_width="75dip"
        android:layout_height="40dip"
        android:layout_below="@+id/etP2Life"
        android:layout_toRightOf="@+id/btnP2Double"
        android:text="@string/tool_divide"
        android:textColor="@color/red" />

    <Button
        android:id="@+id/btnP2Opt"
        android:layout_width="75dip"
        android:layout_height="40dip"
        android:layout_below="@+id/etP2Life"
        android:layout_toRightOf="@+id/btnP2Divide"
        android:text="@string/tool_opt"
        android:textColor="@color/red" />

</RelativeLayout>